src/test/deca/context/valid/assign-float-int.deca
// Description:
//    Assign un float avec un int
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    float i;
    i = 2;
}