src/test/deca/context/invalid/operation-binaire-divide-wrong.deca
// Description:
//    Test 3.33 fail avec divide
//
// Resultats:
//    Ligne 11: Divide ne s'utilise qu'avec des int ou des float.
//
// Historique:
//    cree le 06/01/2023

{
    2 / true;
}